Update 'about.mdx' with new updated date and refine AI research description; remove requirement points from 'location-share.mdx'

--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -2,7 +2,7 @@
 title: "Soyaについて"
 description: "フルスタックエンジニアとしての歩み、価値観、スキルセットを紹介します。"
 date: "2024-01-15"
-updated: "2024-05-20"
+updated: "2025-10-1"
 tags: ["about", "career"]
 cover: "/images/projects/fitnesssns-cover.svg"
 draft: false
@@ -23,7 +23,7 @@ draft: false
 
 人間は“最終承認だけ”を行う Human-in-the-Loop な環境をチャレンジ中です。
 
-また、AIの出力ブレを抑えるために Structured Prompting や RAG（Retrieval Augmented Generation）を活用したプロンプト設計を研究しています。
+また、AIの出力ブレを抑えるために Structured Promptingでプロンプト設計を研究しています。
 これにより「AIに自分の作風を学習させる」ための agent.md 仕様を作成し、出力の一貫性と個性の両立を目指しています。
 
 今後はこの技術を音楽制作やMV制作、UI/UXデザインなどのクリエイティブ分野にも広げ、“AIと人の協働による表現の最適化”をテーマに活動していきたいと考えています。
