--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -16,16 +16,41 @@ draft: false
 
 ## 自己紹介
 はじめまして。Soyaです。
-社会人としてはWeb業界で約6年、なんちゃってですがフルスタックエンジニアとして活動しています。
+社会人としてはWeb業界で約6年、フルスタックエンジニアとして活動しています。
 
 新卒では製造業に従事し、紆余曲折を経てシステムエンジニアへ。
 その中で「手作業を減らし、もっと人が創造に集中できる仕組みを作りたい」と思い、現在はAIを活用した自動化ワークフローの構築に注力しています。
 
-人間は“最終承認だけ”を行う Human-in-the-Loop な環境をチャレンジ中です。
+## 技術スタック
 
-また、AIの出力ブレを抑えるために Structured Promptingでプロンプト設計を研究しています。
-これにより「AIに自分の作風を学習させる」ための agent.md 仕様を作成し、出力の一貫性と個性の両立を目指しています。
+### フロントエンド
+- **JavaScript / TypeScript**（3年以上）
+- **React / Next.js** - SSR/SSG、App Router、パフォーマンス最適化
+- **Vue / Nuxt.js** - コンポーネント設計、リファクタリング
+- **Tailwind CSS / shadcn/ui** - モダンなUI実装
 
-今後はこの技術を音楽制作やMV制作、UI/UXデザインなどのクリエイティブ分野にも広げ、“AIと人の協働による表現の最適化”をテーマに活動していきたいと考えています。
+### バックエンド
+- **PHP / Laravel**（5年）- Web API開発、DB設計
+- **Node.js** - サーバーサイド処理
+
+### インフラ & クラウド
+- **AWS** - ECS (Fargate), CloudFront, S3, Cognito, CloudWatch
+- **Docker** - コンテナ運用
+- **Vercel** - Edge Functions, Analytics
+- **Supabase** - Auth, Database, Realtime
+
+### 開発プロセス & 品質管理
+- **要件定義〜運用保守** - 一気通貫での開発経験
+- **CI/CD** - GitHub Actions, ESLint/Prettier, 自動テスト
+- **テスト駆動開発** - Vitest, Testing Library
+- **SEO & パフォーマンス** - SSRメタ最適化、キャッシュ戦略、画像最適化
+- **監視 & 運用** - CloudWatch、ログ設計、MTTR短縮
+
+### マネジメント
+- **チームリード**（3-5名）- 見積・計画、進行管理、コードレビュー
+- **ステークホルダー調整** - ベンダー折衝、リスク/課題管理
+
+## 今後の展望
+AIと人の協働による表現の最適化をテーマに、音楽制作やMV制作、UI/UXデザインなどのクリエイティブ分野への応用を研究しています。
 
 趣味は体を鍛えたり、旅行したり、おいしいものを食べたり、音楽と広く浅くやってます。
