refactor: standardize frontmatter formatting in MDX files
fix: update project descriptions and metadata in various project files

docs: improve documentation for authoring and content model

style: apply consistent formatting and punctuation across codebase

chore: enhance SEO metadata structure and improve logging

test: add missing commas in test files for consistency

build: update TypeScript configuration for better compatibility

style: refine Tailwind CSS configuration for improved design consistency

chore: update navigation and i18n files for better localization support

--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -1,20 +1,22 @@
 ---
-title: "Soyaについて"
-description: "フルスタックエンジニアとしての歩み、価値観、スキルセットを紹介します。"
-date: "2024-01-15"
-updated: "2025-10-1"
-tags: ["about", "career"]
-cover: "/images/projects/fitnesssns-cover.svg"
+title: 'Soyaについて'
+description: 'フルスタックエンジニアとしての歩み、価値観、スキルセットを紹介します。'
+date: '2024-01-15'
+updated: '2025-10-1'
+tags: ['about', 'career']
+cover: '/images/projects/fitnesssns-cover.svg'
 draft: false
 ---
 
 ## プロフィール
+
 - **名前**: Soya
 - **性別**: 男性
 - **年代**: 20代
 - **拠点**: 関東
 
 ## 自己紹介
+
 はじめまして。Soyaです。
 社会人としてはWeb業界で約6年、フルスタックエンジニアとして活動しています。
 
@@ -24,22 +26,26 @@ draft: false
 ## 技術スタック
 
 ### フロントエンド
+
 - **JavaScript / TypeScript**（3年以上）
 - **React / Next.js** - SSR/SSG、App Router、パフォーマンス最適化
 - **Vue / Nuxt.js** - コンポーネント設計、リファクタリング
 - **Tailwind CSS / shadcn/ui** - モダンなUI実装
 
 ### バックエンド
+
 - **PHP / Laravel**（5年）- Web API開発、DB設計
 - **Node.js** - サーバーサイド処理
 
 ### インフラ & クラウド
+
 - **AWS** - ECS (Fargate), CloudFront, S3, Cognito, CloudWatch
 - **Docker** - コンテナ運用
 - **Vercel** - Edge Functions, Analytics
 - **Supabase** - Auth, Database, Realtime
 
 ### 開発プロセス & 品質管理
+
 - **要件定義〜運用保守** - 一気通貫での開発経験
 - **CI/CD** - GitHub Actions, ESLint/Prettier, 自動テスト
 - **テスト駆動開発** - Vitest, Testing Library
@@ -47,10 +53,12 @@ draft: false
 - **監視 & 運用** - CloudWatch、ログ設計、MTTR短縮
 
 ### マネジメント
+
 - **チームリード**（3-5名）- 見積・計画、進行管理、コードレビュー
 - **ステークホルダー調整** - ベンダー折衝、リスク/課題管理
 
 ## 今後の展望
+
 AIと人の協働による表現の最適化をテーマに、音楽制作やMV制作、UI/UXデザインなどのクリエイティブ分野への応用を研究しています。
 
 趣味は体を鍛えたり、旅行したり、おいしいものを食べたり、音楽と広く浅くやってます。
