chore: update package.json to add format check script and remove unused dependencies; delete prettier config file

--- a/content/en/pages/about.mdx
+++ b/content/en/pages/about.mdx
@@ -47,7 +47,7 @@ Along the way, I realized I wanted to reduce manual work and help people focus o
 ### Delivery & Quality
 
 - **Requirements to operations** - end-to-end delivery experience
-- **CI/CD** - GitHub Actions, ESLint/Prettier, automated testing
+- **CI/CD** - GitHub Actions, Biome, automated testing
 - **Test-driven development** - Vitest, Testing Library
 - **SEO & performance** - SSR metadata optimization, caching strategy, image optimization
 - **Observability & operations** - CloudWatch, log design, MTTR reduction
