--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -47,7 +47,7 @@ draft: false
 ### 開発プロセス & 品質管理
 
 - **要件定義〜運用保守** - 一気通貫での開発経験
-- **CI/CD** - GitHub Actions, ESLint/Prettier, 自動テスト
+- **CI/CD** - GitHub Actions, Biome, 自動テスト
 - **テスト駆動開発** - Vitest, Testing Library
 - **SEO & パフォーマンス** - SSRメタ最適化、キャッシュ戦略、画像最適化
 - **監視 & 運用** - CloudWatch、ログ設計、MTTR短縮
